libgcrypt allows to provide our own malloc implementation. Howver I have identified at least three direct call of malloc instead of do_malloc (global.c)
hmac256.c -> _gcry_hmac256_file
hmac256.c -> _gcry_hmac256_new
secmem.c -> init_pool
libgcrypt allows to provide our own malloc implementation. Howver I have identified at least three direct call of malloc instead of do_malloc (global.c)
hmac256.c -> _gcry_hmac256_file
hmac256.c -> _gcry_hmac256_new
secmem.c -> init_pool
| rC libgcrypt | |||
| rC06fdc074eb29 hmac: Use xtrymalloc. | |||
| rC3e3b520fb32a hmac: Use xtrymalloc. | |||
Note:
When we change the allocation, hmac256.c will not be standalone any more (as commented in the head of the file), and we will need to change the compile-command line to include libgpg-error.
Or... do we keep allocation by malloc with STANDALONE-ifdef?