hmac: Use xtrymalloc.

* src/hmac256.c (_gcry_hmac256_new): Use xtrymalloc.
(_gcry_hmac256_file): Likewise.

--

Don't require config.h but stdint.h for STANDALONE.
Drop STANDALONE support for WindowsCE.

GnuPG-bug-id: 3877
Signed-off-by: NIIBE Yutaka <gniibe@fsij.org>